--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     text-decoration: none;
     display: block;
     padding: 10px;
-    color: black;
+    color: coral;
 }
 
 .nav a:hover {
@@ -40,12 +40,16 @@ a {
     text-decoration: none;
 }
 
-a:visited, a:link {
+.reg_link:visited, .reg_link:link {
     color: coral;
 }
 
-a:hover { 
+.reg_link:hover  { 
     color: darkgrey;
+}
+
+.project:visited, .project:link {
+    color: green;
 }
 
 .list {
@@ -83,7 +87,9 @@ footer {
     margin: 50px 30px;
 }
 
-
+.project_text {
+    text-align: center;
+}
 
 
 
@@ -110,11 +116,16 @@ footer {
 	z-index: 100;
    
 }
+*/
 
 .fade {
    opacity: 1;
-   transition: opacity .25s ease-in-out;
+   transition: opacity .15s ease-in-out;
    }
+
+.fade p {
+    text-align: center;
+}
 
 .fade:hover {
     opacity: 0.5;
@@ -134,7 +145,7 @@ footer {
     margin-top: 70px;
     margin-left: 100px;
     margin-right: 100px;
-} */
+} 
 
 
 
@@ -226,7 +237,7 @@ Large screens
 
 .title_img {
     padding-top: 65px;
-    width: 25%;
+    width: 30%;
     align-self: center;
 }
 
@@ -263,9 +274,6 @@ Large screens
     
 }
 
-
-
-
 .exp_text {
     font-size: 18px;
 }
@@ -274,96 +282,27 @@ end of experience flex stuff**/
 
 
 
-.center {
+
+/*footer stuff*/
+
+footer {
+    margin-top: 100px;
+}
+
+.footer {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    padding-left: 0;
+}
+
+.contact {
+    max-width: 45px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
+
+.foo_p {
     text-align: center;
-}
-
-
-
-
-
-
-.container { width: 100%; max-width: 1280px; min-width: 320px; margin: 0 auto; clear: both; }
-
-.col-3 { float: left;  width: 30.5%; margin-right: 2.8%; height:10%; }
-
-.last { margin-right: 0; }
-
-.titles img {
-    width: 100px;
-    padding-bottom: 3%
-}
-
-
-
-
--webkit-transition: -webkit-transform .2s ease-in-out;
-          transition:         transform .2s ease-in-out;
-}
-
-.cover {
-  object-fit: cover;
-}
-
-#social-media img {
-  margin-top: 50px;
-  width: 35px;
-  padding: 1.5%;
-}
-
-#social-media {
-  text-align: center;
-    margin-top: 40px;
-}
-
-
-.container-lrg,
-.container-sml {
-  margin: auto;
-  width: 100%;
-}
-.container-lrg {
-  max-width: 1080px;
-}
-}.feature2 {
-	border-bottom: 1px solid rgba(0,0,0,.1);
-}
-.feature2	.col-6:nth-of-type(2n - 1) {
-	padding: 90px 90px 90px 20px;
-	border-right: 1px solid rgba(0,0,0,.1)
-}
-.feature2	.col-6:nth-of-type(3n - 1) {
-	padding: 90px 20px 90px 90px;
-}
-.feature2 .emoji {
-	font-size: 55px;
-	color: black
-}
-@media (max-width: 900px) {
-	.feature2 .emoji {
-    font-size: 40px;
-  }
-	.feature2	.col-6:nth-of-type(1) {
-		padding: 45px 45px 45px 20px;
-	}
-	.feature2	.col-6:nth-of-type(2) {
-		padding: 45px 20px 45px 45px;
-	}
-}
-@media (max-width: 600px) {
-	.feature2 {
-		padding: 90px 0;
-	}
-	.feature2 .flex {
-		flex-direction: column;
-	}
-	.feature2	.col-6:nth-of-type(1),
-	.feature2	.col-6:nth-of-type(2) {
-		padding: 0 20px;
-		border: none;
-		width: 100%;
-	}
-	.feature2	.col-6:nth-of-type(2) {
-		margin-top: 30px;
-	}
 }
